// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List matches snapshot when error prop is passed 1`] = `
<ul
  class="list-group"
>
  <li
    class="list-group-item list-group-item-action flex-column border-0"
  >
    Resource Not Available Through NYU Libraries
  </li>
</ul>
`;

exports[`List matches snapshot when links prop is empty 1`] = `
<ul
  class="list-group"
>
  <li
    class="list-group-item list-group-item-action flex-column border-0"
  >
    Resource Not Available Through NYU Libraries
  </li>
</ul>
`;

exports[`List matches snapshot when links prop is passed 1`] = `
<ul
  class="list-group"
>
  <li
    class="list-group-item list-group-item-action flex-column border-0"
  >
    Resource Not Available Through NYU Libraries
  </li>
  <li
    class="list-group-item list-group-item-action flex-column border-0"
  >
    <div
      class="row"
    >
      <a
        href="https://www.example.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Example Website
      </a>
      <p />
    </div>
  </li>
  <li
    class="list-group-item list-group-item-action flex-column border-0"
  >
    <div
      class="row"
    >
      <a
        href="https://www.example.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        Example Organization
      </a>
      <p />
    </div>
  </li>
</ul>
`;

exports[`List matches snapshot when loading prop is true 1`] = `
<div
  class="empty"
  style="height: calc(100vh - 250px); width: 100%;"
/>
`;
